# ejemplo01

./: CMakeLists.txt  README.md  TrabajoGrupal.cpp  burbuja  burbuja.cpp  correccion.cpp  ejemplo01  ejemplo02  ejemplo02.cpp  examenMPI  examenOMP  examenOMP.cpp  grupal  main.cpp  prueba  prueba.cpp  repaso  repaso.cpp
